--- a/.github/workflows/pipeline.yaml
+++ b/.github/workflows/pipeline.yaml
@@ -8,11 +8,11 @@ jobs:
   build:
     runs-on: ubuntu-latest
     steps:
-    - name: Checking out code
-    - uses: actions/checkout@v4
+      - name: Checking out code
+        uses: actions/checkout@v4
     
-    - name: Build Docker Image
-      run: docker build -t simplejava-app .
+      - name: Build Docker Image
+        run: docker build -t simplejava-app .
     
-    - name: Run Docker Container
-      run: docker run simplejava-app
+      - name: Run Docker Container
+        run: docker run simplejava-app
